; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_win32_window.c_hideCursor.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_win32_window.c_hideCursor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @hideCursor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hideCursor(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %4 = call i32 @ClipCursor(i32* null)
  %5 = call i64 @GetCursorPos(i32* %3)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @WindowFromPoint(i32 %8)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %9, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %7
  %16 = call i32 @SetCursor(i32* null)
  br label %17

17:                                               ; preds = %15, %7
  br label %18

18:                                               ; preds = %17, %1
  ret void
}

declare dso_local i32 @ClipCursor(i32*) #1

declare dso_local i64 @GetCursorPos(i32*) #1

declare dso_local i64 @WindowFromPoint(i32) #1

declare dso_local i32 @SetCursor(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
